<resources>
    <string name="app_name">UPDIS</string>
    <string name="login_on_progress">正在载入...</string>
    <string-array name="category_tab_text">
        <item>通知</item>
        <item>招投标信息</item>
        <item>畅所欲言</item>
        <item>业余生活</item>
        <item>在谈项目</item>
    </string-array>
    <string-array name="push_time">
        <item>开启</item>
        <item>只在夜间开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="push_time_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="personnel_tab_text">
        <item>人员查询</item>
        <item>通讯录</item>
    </string-array>
    <string-array name="myinfo_tab_text">
        
        
        <item>发布信息</item>
        <item>我发布的</item>

    </string-array>
    <string-array name="projectlist_tab_text">
        
        
        <item>待处理项目</item>
    </string-array>
    <string name="setting_push_title">消息推送:</string>
    <string name="setting_push_title_notice">通知</string>
    <string name="setting_push_title_bidding">招投标信息</string>
    <string name="setting_push_title_talk">畅所欲言</string>
    <string name="setting_push_title_amateur">业余生活</string>
    <string name="setting_push_title_project">在谈项目</string>
    <string name="setting_push_time_title">后台消息提醒时段:</string>
    <string name="setting_push_time_open">开启</string>
    <string name="setting_push_time_night">只在夜间开启</string>
    <string name="setting_push_time_close">关闭</string>
    <string name="setting_about">关于</string>
    <string name="setting_feekback">意见反馈</string>
    <string name="setting_version">版本</string>
    <string name="setting_check_version">检查更新</string>
    <string name="bottom_nav_home">分类消息</string>
    <string name="bottom_nav_category">人事相关</string>
    <string name="bottom_nav_recommend">我的信息</string>
    <string name="bottom_nav_manage">设置</string>
    <string name="login_phonenum_tag">您的手机号码为</string>
    <string name="login_sms_tag">请将短信中的验证码输入下框内</string>
    <string name="login_verification_code">验证码:</string>
    <string name="login_user_name">账号:</string>
    <string name="login_user_pwd">密码:</string>
    <string name="query_user_name">姓名:</string>
    <string name="query_user_dept">部门:</string>
    <string name="query_user_subject">专业:</string>
    <string name="updis_confirm">确认</string>
    <string name="updis_ok">确定</string>
    <string name="updis_login">登录</string>
    <string name="updis_query">查询</string>
    <string name="updis_logout">退出</string>
    <string name="updis_logout_confirm">确定退出UPDIS Android 版?</string>
    <string name="updis_query_tips_name">姓名不能为空</string>
    <string name="updis_query_tips_dept">请选择单位</string>
    <string name="updis_query_tips_subject">请选择专业</string>
    <string name="updis_login_tips_username">账号不能为空</string>
    <string name="updis_login_tips_userpwd">密码不能为空</string>
    <string name="updis_login_tips_unreg">设备未注册,请注册</string>
    <string name="updis_login_logingerror_title">登录失败</string>
    <string name="updis_login_tips_vercode">验证码不能为空</string>
    <string name="updis_login_progress_tips">正在请求服务器...</string>
    <string name="updis_sendmsg_tips_category">请选择分类</string>
    <string name="updis_sendmsg_tips_title">标题不能为空</string>
    <string name="updis_sendmsg_tips_content">内容不能为空</string>
    <string name="updis_service_error_title">服务器连接出错</string>
    <string name="updis_service_error_tip">服务器暂时无法连接,请稍后在试</string>
    <string name="updis_need_reg">您没有登记手机号码,请登录内网个人信息修改页面添加手机号码后再登录.</string>
    <string name="set_network">设置网络</string>
    <string name="updis_network_error_title">无可用网络</string>
    <string name="updis_network_error_tip">对不起，当前没有检测到可用网络，请重新连接或稍后再试！</string>
    <string name="updis_view_related_list">相关阅读</string>
    <string name="updis_view_comment_list">评论列表</string>
    <string name="updis_view_comment_list_showall">查看全部</string>
    <string name="updis_view_comment_list_write">说两句</string>
    <string name="updis_change_pwd_now">当前密码:</string>
    <string name="updis_change_pwd_new">新密码:</string>
    <string name="updis_change_pwd_new2">重复新密码:</string>
    <string name="updis_changepwd_nowpwd_tips">当前密码不能为空</string>
    <string name="updis_changepwd_newpwd_tips">新密码不能为空</string>
    <string name="updis_changepwd_newpwd2_tips">请重复新密码</string>
    <string name="updis_changepwd_newpwderror_tips">新密码2次输入不一致</string>
    <string name="updis_person_detail_dept">所在部门:</string>
    <string name="updis_person_detail_birthday">出生日期:</string>
    <string name="updis_person_detail_gender">性别:</string>
    <string name="updis_person_detail_specialty">专业:</string>
    <string name="updis_person_detail_educational">学历:</string>
    <string name="updis_person_detail_degree">学位:</string>
    <string name="updis_person_detail_graduationdate">毕业时间:</string>
    <string name="updis_person_detail_entrydate">进院时间:</string>
    <string name="updis_person_detail_rank">职级:</string>
    <string name="updis_person_detail_titles">职称:</string>
    <string name="updis_person_detail_mobilePhone">手机号码:</string>
    <string name="updis_person_detail_officePhone">办公电话:</string>
    <string name="updis_person_detail_homeNum">家庭电话:</string>
    <string name="updis_person_detail_mail">电子邮件:</string>
    <string name="updis_person_detail_resume">个人简历:</string>
    <string name="updis_send_msg_category">分类:</string>
    <string name="updis_send_msg_title">标题:</string>
    <string name="updis_send_msg_content">内容:</string>
    <string name="updis_send_msg_dept">部门:</string>
    <string name="updis_anonymous">匿名</string>
    <string-array name="treasure_tab_text">
        <item>专题集锦</item>
        <item>用户推荐</item>
    </string-array>
    <string-array name="manage_tab_text">
        <item>数据转移</item>
        <item>下载列表</item>
        <item>已装列表</item>
        <item>更新列表</item>
        <item>SD卡扫描</item>
    </string-array>
    <string-array name="ranking_page_nav_tab_text">
        <item>最新排行</item>
        <item>最热排行</item>
    </string-array>
    <string-array name="move_data_tab_text">
        <item>移至SD卡</item>
        <item>移至内存</item>
    </string-array>
    <string-array name="more_dowmload_count">
        <item>1个</item>
        <item>2个</item>
        <item>3个</item>
        <item>4个</item>
        <item>5个</item>
    </string-array>
    <string-array name="more_dowmload_count_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="feedback_type">反馈类型：</string>
    <string-array name="randomText">
        <item>"设置"中可打开"wifi自动下载",节省GPRS流量</item>
        <item>想快速查找软件,进入"搜索"快速查找</item>
        <item>喜欢的软件,"评论"一下吧</item>
        <item>手机内存太满,试试"数据转移"</item>
    </string-array>
    <string name="no_load_image_key">no_load_image_key</string>
    <string name="download_set_key">download_set_key</string>
    <string name="auto_download_task_key">auto_download_task_key</string>
    <string name="auto_wifi_download_key">auto_wifi_download_key</string>
    <string name="auto_install_key">auto_install_key</string>
    <string name="remind_download_key">remind_download_key</string>
    <string name="remind_update_key">remind_update_key</string>
    <string name="delete_cache_key">delete_cache_key</string>
    <string name="market_update_menu">市场更新</string>
    <string name="local_software">本地软件</string>
    <string name="apps_available_update">个应用软件可更新</string>
    <string name="check_update_list">点击进入更新列表。</string>
    <string name="apps_update_list">apps_update_list</string>
    <string name="check_update_error">检查更新失败,请查看您的网络连接,或则稍后重新尝试!</string>
    <string name="prompt_no_update">已是最新版本!</string>
    <string name="prompt_check_upgrade">版本进行更新检测…</string>
    <string name="feedback_update_prompt">我们会根据您的反馈, 及时的发布新版本.</string>
    <string name="free_download">免费</string>
    <string name="waiting">等待中</string>
    <string name="ji_jie">我要推荐</string>
    <string name="share">大家分享</string>
    <string name="select_how_to_share">选择以下方式分享给好友</string>
    <string name="more_new">最新上架</string>
    <string name="top_seller">畅销排行</string>
    <string name="search_hint">搜索精彩应用！</string>
    <string name="search_keywords">大家都在搜索什么？</string>
    <string name="more_keywords">更多热词</string>
    <string name="failure_found">请输入符合内容，再继续搜索！</string>
    <string name="error_search_in_progress">正在搜索，请稍后...</string>
    <string name="move_to_sd">移至SD卡</string>
    <string name="move_to_phone">移至内存</string>
    <string name="calculate_size">正在计算中...</string>
    <string name="uninstalled_app">卸载</string>
    <string name="install_apk_text">安装</string>
    <string name="select_all">全选</string>
    <string name="select_quit">取消全选</string>
    <string name="delete_all">从手机SD卡上删除选中APK文件,点击”确定“将删除？</string>
    <string name="no_choice_apk">您未选择需要删除的APK文件</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_conform">您确定删除文件？</string>
    <string name="prompt_on_application_exit_title">温馨提示</string>
    <string name="confirm_null_btn">确\u0020\u0020\u0020\u0020\u0020\u0020定</string>
    <string name="cancel_null_btn">取\u0020\u0020\u0020\u0020\u0020\u0020消</string>
    <string name="catalog_search">本地APK查找目录</string>
    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>
    <string name="ignore_update">忽\u0020略</string>
    <string name="new_version">新版：</string>
    <string name="resource_detail">详情</string>
    <string name="resource_evaluate">评论</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="app_des">软件描述</string>
    <string name="share_btn">分享</string>
    <string name="report">举报</string>
    <string name="version_library">版本库</string>
    <string name="report_no_download">无法下载</string>
    <string name="report_no_install">无法安装</string>
    <string name="report_carry_virus">携带病毒</string>
    <string name="report_content_error">内容有误</string>
    <string name="report_harmful_mobile">对手机或数据有害</string>
    <string name="report_version_update">版本需要更新</string>
    <string name="report_other_problem">其他问题</string>
    <string name="report_content">请填写举报内容，最多输入100字。</string>
    <string name="tip_report">举报信息已提交,我们会尽快处理</string>
    <string name="tip_feedback">反馈信息已提交,我们会尽快处理</string>
    <string name="user">用户：</string>
    <string name="user_comment">用户评论</string>
    <string name="jijiedajia">我要推荐</string>
    <string name="recommend">推荐</string>
    <string name="submit">提交</string>
    <string name="set_flow">省流量设置</string>
    <string name="no_image_set">无图片浏览设置</string>
    <string name="image_flow_control">不加载图片，可以进行流量控制</string>
    <string name="download_set">下载设置</string>
    <string name="download_task_count">下载任务数量设置</string>
    <string name="set_download_des">同时下载任务量：默认</string>
    <string name="start_no_finish">启动时下载未完成任务</string>
    <string name="download_install">下载完成任务自动安装</string>
    <string name="remind">提醒</string>
    <string name="remind_update">软件可更新提醒</string>
    <string name="remind_update_des">如果有更新应用，提醒通知</string>
    <string name="delete_cache">清除缓存</string>
    <string name="delete_all_cache">清除所有缓存文件</string>
    <string name="same_time_download">最大同时下载数目</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="exit">退出</string>
    <string name="auto_wifi_download">wifi自动下载</string>
    <string name="aide_title">市场小助手设置</string>
    <string name="aide_switch">小助手开关</string>
    <string name="aide_msg_sound">消息提示音</string>
    <string name="aide_show_sty">显示方式</string>
    <string name="aide_show_key">aide_show_key</string>
    <string name="aide_switch_key">aide_switch_key</string>
    <string name="aide_msg_sound_key">aide_msg_sound_key</string>
    <string name="bottom_nav_project">项目</string>
</resources>