<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/top_navbar_layout" />

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/bottom_navgater"
            android:background="@drawable/bgbtm"
            android:paddingLeft="2.0dip"
            android:paddingRight="2.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bottom_nav_home"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bottom_nav_home"
                android:drawableTop="@drawable/icon_1"
                style="@style/bottom_navigate_text" />

            <TextView
                android:id="@+id/bottom_nav_category"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bottom_nav_category"
                android:drawableTop="@drawable/icon_2"
                style="@style/bottom_navigate_text" />

            <TextView
                android:id="@+id/bottom_nav_recommend"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bottom_nav_recommend"
                android:drawableTop="@drawable/icon_3"
                style="@style/bottom_navigate_text" />

            <TextView
                android:id="@+id/bottom_nav_project"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bottom_nav_project"
                android:drawableTop="@drawable/icon_4"
                style="@style/bottom_navigate_text" />

            <TextView
                android:id="@+id/bottom_nav_manage"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bottom_nav_manage"
                android:drawableTop="@drawable/icon_5"
                style="@style/bottom_navigate_text" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
