<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="horizontal"
        android:background="#dd000000"
        android:paddingTop="10.0dip"
        android:paddingBottom="12.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/menu_update"
            android:background="@drawable/click_selector"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:drawableTop="@drawable/menu_update"
            android:layout_weight="1.0"/>

    <ImageView
            android:background="@drawable/menu_line"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"/>

    <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/menu_about"
            android:background="@drawable/click_selector"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:drawableTop="@drawable/menu_about"
            android:layout_weight="1.0"/>

    <ImageView
            android:background="@drawable/menu_line"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"/>

    <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/menu_setting"
            android:background="@drawable/click_selector"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:drawableTop="@drawable/menu_set"
            android:layout_weight="1.0"/>

    <ImageView
            android:background="@drawable/menu_line"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"/>

    <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/menu_feedback"
            android:background="@drawable/click_selector"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:drawableTop="@drawable/menu_feedback"
            android:layout_weight="1.0"/>

    <ImageView
            android:background="@drawable/menu_line"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10.0dip"/>

    <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/menu_exit"
            android:background="@drawable/click_selector"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:drawableTop="@drawable/menu_exit"
            android:layout_weight="1.0"/>
</LinearLayout>
